WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282584
Radial gradients stopping at 100% are broken
https://bugs.webkit.org/show_bug.cgi?id=282584
Summary
Radial gradients stopping at 100% are broken
Alvaro Montoro
Reported
2024-11-04 18:58:31 PST
Created
attachment 473139
[details]
Screenshot of radial-gradient bug on Safari If a gradient has a stop point at 100%, the gradient will be broken on Safari on Mac. Code example (
https://codepen.io/alvaromontoro/pen/ZEgMzrq
): <div></div> <div></div> <style> div { width: 300px; height: 300px; background: radial-gradient(farthest-side at 0 0, red 100%, blue 0);; } div:nth-child(2) { background: radial-gradient(farthest-side at 0 0, red 99.9999%, blue 0); } </style> ---- This issue has been happening for years. I thought I had opened a ticket about it before, but I can't find it.
Attachments
Screenshot of radial-gradient bug on Safari
(112.33 KB, image/png)
2024-11-04 18:58 PST
,
Alvaro Montoro
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-11-06 10:38:13 PST
<
rdar://problem/139369366
>
Simon Fraser (smfr)
Comment 2
2024-11-09 12:28:06 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36442
EWS
Comment 3
2024-11-10 12:59:43 PST
Committed
286413@main
(737f793f8647): <
https://commits.webkit.org/286413@main
> Reviewed commits have been landed. Closing PR #36442 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug