Radial gradients stopping at 100% are broken https://bugs.webkit.org/show_bug.cgi?id=282584 rdar://139369366

Reviewed by Sam Weinig.

If a gradient has two color stops at 100%, CoreGraphics has a bug where the last
color fails to extend; this is visible in radial gradients.

Work around this by replicating the last color stop.

* LayoutTests/fast/gradients/radial-two-stops-at-one-expected.html: Added.
* LayoutTests/fast/gradients/radial-two-stops-at-one.html: Added.
* Source/WebCore/platform/graphics/cg/GradientRendererCG.cpp:
(WebCore::GradientRendererCG::makeGradient const):
* Source/WebCore/platform/graphics/displaylists/DisplayListItems.cpp:
(WebCore::DisplayList::FillRectWithGradient::dump const):

Canonical link: https://commits.webkit.org/286413@main